--- a/services.html
+++ b/services.html
@@ -53,28 +53,28 @@
             <ul>
                     <li>2025:
                         <ul>
-                            <li>[<strong>Tutorial Co-Chair</strong>] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD'25).</li>
+                            <li>[Tutorial Co-Chair] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD'25).</li>
                         </ul>
                     <li>2024:
                         <ul>
-                            <li>[<strong>Orgnizer</strong>, <strong>Chair</strong>] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshops on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
-                            <li>[<strong>Orgnizer</strong>, <strong>Chair</strong>] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshops on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
-                            <li>[<strong>Orgnizer</strong>, <strong>Chair</strong>] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
-                            <li>[<strong>Orgnizer</strong>, <strong>Chair</strong>] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
-                            <li>[<strong>Co-Chair</strong>] Big Data Cup Challenges (IEEE BigData'24).</li>
-                            <li>[<strong>Orgnizer</strong>] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>.</li>
+                            <li>[Orgnizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshops on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
+                            <li>[Orgnizer, Chair] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshops on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
+                            <li>[Orgnizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
+                            <li>[Orgnizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
+                            <li>[Co-Chair] Big Data Cup Challenges (IEEE BigData'24).</li>
+                            <li>[Orgnizer] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>.</li>
                         </ul>
                     <li>2023:
                         <ul>
-                            <li>[<strong>Orgnizer</strong>, <strong>Chair</strong>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">The 2nd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'23).</li>
-                            <li>[<strong>Orgnizer</strong>, <strong>Chair</strong>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">The 2nd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'23).</li>
-                            <li>[<strong>Session Chair</strong>] ACM Conference on Knowledge Discovery and Data Mining (KDD'23).</li>
+                            <li>[Orgnizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">The 2nd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'23).</li>
+                            <li>[Orgnizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">The 2nd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'23).</li>
+                            <li>[Session Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'23).</li>
                         </ul>
                     <li>2022:
                         <ul>
-                            <li>[<strong>Orgnizer</strong>, <strong>Chair</strong>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">The 1st Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'22).</li>
-                            <li>[<strong>Orgnizer</strong>, <strong>Chair</strong>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">The 1st Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ AAAI'22).</li>
-                            <li>[<strong>Mentor</strong> at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD'22).</li>
+                            <li>[Orgnizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">The 1st Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'22).</li>
+                            <li>[Orgnizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">The 1st Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ AAAI'22).</li>
+                            <li>[Mentor at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD'22).</li>
                         </ul>
             </ul>
 
@@ -82,9 +82,9 @@
 
             <p><strong>Journal Editorial Board </strong></p>
             <ul>
-                <li>[<strong>Guest Editor</strong>] <a href="https://www.mdpi.com/journal/mathematics">Mathematics</a>, MDPI, since 2024.</li>
-                <li>[<strong>Editorial Board Member</strong>] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
-		<li>[<strong>Editorial Member</strong>] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
+                <li>[Guest Editor] <a href="https://www.mdpi.com/journal/mathematics">Mathematics</a> (IF=2.3), MDPI, since 2024.</li>
+                <li>[Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
+		<li>[Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
             </ul>
 
 		
