--- a/students.html
+++ b/students.html
@@ -49,6 +49,7 @@
         <div class="my-4 text-left">
             <h2>Students</h2>
 
+            <p><strong>Open Positions</strong></p>
             <p style="text-align:justify;background-color:#F2F3F4">
         		<strong>To Prospective Ph.D. Students</strong>: 
                 I am always looking for students with <strong> high motivations</strong> and <strong>strong coding skills</strong> to join my research group or work with me as summer interns. 
