--- a/students.html
+++ b/students.html
@@ -50,7 +50,7 @@
             <h2>Students</h2>
 
             <p><strong>Open Positions</strong></p>
-            <p style="text-align:justify;background-color:#F2F3F4">
+            <div background-color: #F2F3F4">
         		<strong>To Prospective Ph.D. Students</strong>: 
                 I am always looking for students with <strong> high motivations</strong> and <strong>strong coding skills</strong> to join my research group or work with me as summer interns. 
         		There are several RA openings for graduate students in my lab at Baylor University. 
@@ -84,7 +84,7 @@
         		<br>
         		<br>
         		<strong>NOTE</strong>: <em>Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
-        	</p>
+        	</div>
 
 
 
