--- a/students.html
+++ b/students.html
@@ -58,10 +58,11 @@
         		Students are expected to work closely with me on several research projects. Applicants with a degree in related fields (<em>e.g.,</em> CS/CE/EE/STAT) are preferred. 
         		Research backgrounds in machine learning, artificial intelligence, data mining, big data, and statistics are desired.
                 <br>
+                <br>
 
                 Please read the following guidelines to better demonstrate your purpose and strengths.
                 <ul>
-                    <li>Send your application to Chen Zhao (chen_zhao [at] baylor [dot] edu) </li>
+                    <li>Send your application to me (chen_zhao [at] baylor [dot] edu) </li>
                     <li>Mail subject line as "[Prospective Student - PhD] <em>Your Name</em>" </li>
                     <li>Briefly mention your education background, GPA/Rank, and English test scores (especially speaking) if available </li>
                     <li>Briefly introduce your research experience, and it will make you stand out if you have publications at top-tier venues (<em>e.g.,</em> KDD, IJCAI, AAAI, WWW, ICML, NeurIPS, ICLR, WWW, ACL, EMNLP, CVPR, <em>etc.</em>) </li>
@@ -70,17 +71,20 @@
                 </ul>
                 To apply, please drop me an email and mention my name in the University application system. The start dates of the positions are flexible, <em>i.e.,</em> Spring or Fall semesters.
                 <br>
+                <br>
             
                 <strong>To Interns</strong>: 
                 I also welcome intern/graduate/undergraduate students who have solid machine learning backgrounds and aim for research publications.
                 <ul>
-                    <li>Send your application to Chen Zhao (chen_zhao [at] baylor [dot] edu) </li>
+                    <li>Send your application to me (chen_zhao [at] baylor [dot] edu) </li>
                     <li>Mail subject line as "[Prospective Student - PhD] <em>Your Name</em>" </li>
                     <li>Briefly mention your education background, GPA/Rank, and English test scores (especially speaking) if available </li>
                     <li>Attach your curriculum vitae, transcripts, and English test scores if available </li>
                 </ul>
 
         		<strong>NOTE</strong>: <em>Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
+                <br>
+                <br>
         	</div>
 
 
