--- a/students.html
+++ b/students.html
@@ -82,11 +82,14 @@
                     <li>Attach your curriculum vitae, transcripts, and English test scores if available </li>
                 </ul>
 
-        		<strong>NOTE</strong>: <em>Unfortunately, due to the volume of emails, I will not respond to all of them.</em>
+        		<strong>Note</strong>: <em>I will read all emails. Unfortunately, due to the volume of emails, I will not be able to respond to all of them.</em>
         	</div>
 
 
+            <br>
+            <br>
 
+            
             <div>
             <p><strong>Thesis Committee</strong></p>
             	<ul>
