--- a/students.html
+++ b/students.html
@@ -49,25 +49,24 @@
         <div class="my-4 text-left">
             <h2>Students</h2>
 
-            <p><strong>Open Positions</strong></p>
             <div style="background-color: #F2F3F4;">
         		<strong>To Prospective Ph.D. Students</strong>: 
-                I am always looking for students with <strong> high motivations</strong> and <strong>strong coding skills</strong> to join my research group or work with me as summer interns. 
-        		There are several RA openings for graduate students in my lab at Baylor University. 
+                I am always looking for students with <strong> high motivations</strong> and <strong>strong coding skills</strong> to join my research group. 
+        		There are several RA openings for Ph.D. students in my lab at Baylor University. 
         		These positions are supported by a monthly stipend and tuition waiver. 
         		Students are expected to work closely with me on several research projects. Applicants with a degree in related fields (<em>e.g.,</em> CS/CE/EE/STAT) are preferred. 
         		Research backgrounds in machine learning, artificial intelligence, data mining, big data, and statistics are desired.
                 <br>
                 <br>
 
-                Please read the following guidelines to better demonstrate your purpose and strengths.
+                Please read the following guidelines to better demonstrate your purpose and strengths:
                 <ul>
-                    <li>Send your application to me (chen_zhao [at] baylor [dot] edu) </li>
-                    <li>Mail subject line as "[Prospective Student - PhD] <em>Your Name</em>" </li>
-                    <li>Briefly mention your education background, GPA/Rank, and English test scores (especially speaking) if available </li>
-                    <li>Briefly introduce your research experience, and it will make you stand out if you have publications at top-tier venues (<em>e.g.,</em> KDD, IJCAI, AAAI, WWW, ICML, NeurIPS, ICLR, WWW, ACL, EMNLP, CVPR, <em>etc.</em>) </li>
-                    <li>If you do not have any paper experience, a very effective way to impress me is to contact me early and work with me (see <strong>To Interns</strong>) </li>
-                    <li>Attach your curriculum vitae, transcripts, and English test scores if available </li>
+                    <li>Send your application to me (chen_zhao [at] baylor [dot] edu); </li>
+                    <li>Mail subject line as "[Prospective Student - Ph.D.] <em>Your Name</em>"; </li>
+                    <li>Briefly mention your education background, GPA/Rank, and English test scores (especially speaking), if available; </li>
+                    <li>Briefly introduce your research experience, and it will make you stand out if you have publications at top-tier venues (<em>e.g.,</em> KDD, IJCAI, AAAI, WWW, ICML, NeurIPS, ICLR, WWW, ACL, EMNLP, CVPR, <em>etc.</em>); </li>
+                    <li>If you do not have any paper experience, a very effective way to impress me is to contact me early and work with me (see <strong>To Interns</strong>); </li>
+                    <li>Attach your curriculum vitae, transcripts, and English test scores, if available. </li>
                 </ul>
                 To apply, please drop me an email and mention my name in the University application system. The start dates of the positions are flexible, <em>i.e.,</em> Spring or Fall semesters.
                 <br>
@@ -76,10 +75,10 @@
                 <strong>To Interns</strong>: 
                 I also welcome intern/graduate/undergraduate students who have solid machine learning backgrounds and aim for research publications.
                 <ul>
-                    <li>Send your application to me (chen_zhao [at] baylor [dot] edu) </li>
-                    <li>Mail subject line as "[Prospective Student - PhD] <em>Your Name</em>" </li>
-                    <li>Briefly mention your education background, GPA/Rank, and English test scores (especially speaking) if available </li>
-                    <li>Attach your curriculum vitae, transcripts, and English test scores if available </li>
+                    <li>Send your application to me (chen_zhao [at] baylor [dot] edu); </li>
+                    <li>Mail subject line as "[Prospective Student - Ph.D.] <em>Your Name</em>"; </li>
+                    <li>Briefly mention your education background, GPA/Rank, and English test scores (especially speaking), if available; </li>
+                    <li>Attach your curriculum vitae, transcripts, and English test scores, if available. </li>
                 </ul>
 
         		<strong>Note</strong>: <em>I will read all emails. Unfortunately, due to the volume of emails, I will not be able to respond to all of them.</em>
