--- a/publications.html
+++ b/publications.html
@@ -55,22 +55,22 @@
             <p><strong>Preprints</strong></p>
                 <ol>
                     <li>
-                		<strong>[ArXiv]</strong> Graphs Generalization under Distribution Shifts. </br>
+                		Graphs Generalization under Distribution Shifts. </br>
                 		<u>Qin Tian</u>, Wenjun Wang, <strong>Chen Zhao</strong>, Minglai Shao, Wang Zhang, Dong Li. <br/>
                 		<em>ArXiv preprint, 2403.16334</em>
                 	</li>
                     <li>
-                		<strong>[ArXiv]</strong> Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. </br>
+                		Towards Effective Semantic OOD Detection in Unseen Domains: A Domain Generalization Perspective. </br>
                 		<u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Yunhui Guo, Kai Jiang, Feng Chen. <br/>
                 		<em>ArXiv preprint, 2309.10209</em>
                 	</li>
                     <li>
-                		<strong>[ArXiv]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. </br>
+                		An Automated Vulnerability Detection Framework for Smart Contracts. </br>
                 		Feng Mi, <strong>Chen Zhao</strong>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham. <br/>
                 		<em>ArXiv preprint, 2301.08824</em>
                 	</li>
                     <li>
-                		<strong>[ArXiv]</strong> PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning. </br>
+                		PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning. </br>
                 		<strong>Chen Zhao</strong>, Feng Chen, Zhuoyi Wang, Latifur Khan. <br/>
                 		<em>ArXiv preprint, 2009.12675v2</em>
                 	</li>
