--- a/services.html
+++ b/services.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Chen Zhao - Services</title>
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" /><!-- Custom styles for this template -->
+    <title>Services | Chen Zhao </title>
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/small-business.css" rel="stylesheet" />
     <link href="css/all.css" rel="stylesheet" />
     <link href="css/academicons.css" rel="stylesheet" />
