--- a/talks.html
+++ b/talks.html
@@ -60,9 +60,10 @@
 
             <p><strong>Invited Talks</strong></p>
             <ul>
-                <li>Towards Algorithmic Fairness under Distribution Shifts.
+                <li>Advances in Fairness and Robustness in Machine Learning Under Distribution Shifts.
                     <ul>
-                        <li>Equifax Inc. (July 2024, Atlanta, GA, USA, Host: Joseph White)</li>
+                        <li>Graduate Seminar, Baylor University (September 2024, Waco, TX, USA, Host: Eunjee Song)</li>
+                        <li>Equifax Inc. (July 2024, Online, Host: Joseph White)</li>
                         <li>Data Science Seminar, Baylor University (October 2023, Waco, TX, USA, Host: Henry Han)</li>
                         <li>Data Science and System Security team, NEC Laboratories America (October 2022, Princeton, NJ, USA, Host: Haifeng Chen)</li>
                     </ul>
