--- a/students.html
+++ b/students.html
@@ -87,6 +87,19 @@
             <br>
             <br>
 
+
+            <div class="container">
+                <div class="image-wrapper">
+                    <img src="./files/student_images/xinyu_wu_img.png" alt="Xinyu Wu" width="300"> 
+                    <p>Description for Image 1</p>
+                </div>
+                <div class="image-wrapper">
+                    <img src="image2.jpg" alt="Xiaohui Chen" width="300"> 
+                    <p>Description for Image 2</p>
+                </div>
+            </div>
+
+            
             
             <div>
             <p><strong>Thesis Committee</strong></p>
