--- a/students.html
+++ b/students.html
@@ -87,16 +87,17 @@
             <br>
             <br>
 
-
+            
+            <p><strong>Current Students</strong></p>
             <div class="container">
-                <div class="image-wrapper">
+                <div>
                     <img src="./files/student_images/xinyu_wu_img.png" alt="Xinyu Wu" width="300"> 
                     <p>Description for Image 1</p>
                 </div>
-                <div class="image-wrapper">
+<!--                 <div class="image-wrapper">
                     <img src="image2.jpg" alt="Xiaohui Chen" width="300"> 
                     <p>Description for Image 2</p>
-                </div>
+                </div> -->
             </div>
 
             
