--- a/students.html
+++ b/students.html
@@ -89,12 +89,12 @@
 
             <div>
                 <p><strong>Current Students</strong></p>
-<!--                 <div class="container"> -->
+                <div class="container">
                     <div>
-                        <img src="./files/student_imgs/xinyu_wu_img.png" alt="Xinyu Wu" width="300"> 
-                        <p>Description for Image 1</p>
+                        <img src="./files/student_imgs/xinyu_wu_img.png" alt="Xinyu Wu" width="250"> 
+                        <p><a href="https://wuxinyu519.github.io/">Xinyu Wu</a></p>
                     </div>
-<!--                 </div> -->
+                </div>
             </div>    
 
             
