--- a/students.html
+++ b/students.html
@@ -90,7 +90,7 @@
             <div>
                 <p><strong>Current Students</strong></p>
                 <div class="container">
-                    <div>
+                    <div class="image-wrapper" style="text-align: center">
                         <img src="./files/student_imgs/xinyu_wu_img.png" alt="Xinyu Wu" width="250"> 
                         <p><a href="https://wuxinyu519.github.io/">Xinyu Wu</a></p>
                     </div>
