--- a/students.html
+++ b/students.html
@@ -92,8 +92,10 @@
                 <div class="container" style="display: flex; justify-content: flex-start; gap: 20px">
                     <div class="image-wrapper" style="text-align: center">
                         <img src="./files/student_imgs/xinyu_wu_img.png" alt="Xinyu Wu" width="200"> 
-                        <p><a href="https://wuxinyu519.github.io/">Xinyu Wu</a></p>
-                        <p>Ph.D. Student (09/2024 - )</p>
+                        <p>
+                            <a href="https://wuxinyu519.github.io/">Xinyu Wu</a> <br>
+                            Ph.D. Student (09/2024 - )
+                        </p>
                     </div>
                     <div class="image-wrapper" style="text-align: center">
                         <img src="./files/student_imgs/xiaohui_chen_img.jpg" alt="Xiaohui Chen" width="200"> 
