--- a/students.html
+++ b/students.html
@@ -123,9 +123,8 @@
 
 
             <div>
-            <p><strong>Graduate Students Supervised</strong></p>
+            <p><strong>Graduate Students Mentored (Beyond Baylor)</strong></p>
             	<ul>
-            		<li>Xiaohui Chen, Ph.D. student, Baylor University, 2024 Fall - present</li>
             		<li>Haoliang Wang, Ph.D. student, The University of Texas at Dallas, 2020 Fall - present </li>
             		<li>Kai Jiang, Ph.D. student, The University of Texas at Dallas, 2021 Fall - present </li>
                     <li>Kangshuo Li, Ph.D. student, The University of Texas at Dallas, 2023 Fall - present </li>
