--- a/students.html
+++ b/students.html
@@ -102,7 +102,7 @@
                     <div class="image-wrapper" style="text-align: center">
                         <img src="./files/student_imgs/xiaohui_chen_img.jpg" alt="Xiaohui Chen" width="200"> 
                         <p>
-                            <a href="https://charliezhaoyinpeng.github.io/homepage/students.html">Xiaohui Chen</a> <br>
+                            <a href="https://chenxiao-2023.github.io/">Xiaohui Chen</a> <br>
                             Ph.D. Student (09/2024 - )
                         </p>
                     </div>
