--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
             <ul>
                     <li>2025:
                         <ul>
-                            <li>[Tutorial Co-Chair] Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD'25).</li>
+                            <li>[Tutorial Co-Chair] <a href="https://www.pakdd2025.org/organization/#:~:text=de%20Madrid%2C%20Spain-,Tutorial%20Chairs,-Chen%20Zhao%2C%20Baylor"> The Pacific-Asia Conference on Knowledge Discovery and Data Mining</a> (PAKDD'25).</li>
                         </ul>
                     <li>2024:
                         <ul>
@@ -81,7 +81,7 @@
 
             <p><strong>Journal Editorial Board </strong></p>
             <ul>
-                <li>[Guest Editor] <a href="https://www.mdpi.com/journal/mathematics">Mathematics</a> (IF=2.3), MDPI, since 2024.</li>
+                <li>[Guest Editor] Mathematics (IF=2.3), MDPI, <a href="https://www.mdpi.com/journal/mathematics/special_issues/2496644R7D"> Special Issue: Advances in Trustworthy and Robust Artificial Intelligence </a>, since 2024.</li>
                 <li>[Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li>[Editorial Member] American Journal of Artificial Intelligence (AJAI), 2022-2024. </li>
             </ul>
