--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 
 	    
 	<p style="text-align:justify;background-color:#D7BDE2">
+	<strong>Call for papers</strong>: Mathematics, MDPI, Special Issue: <a href="https://www.mdpi.com/journal/mathematics/special_issues/2496644R7D">Advances in Trustworthy and Robust Artificial Intelligence</a>.
+	<br>
 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshop on Robust Machine Learning for Distribution Shifts (RobustMLDS @ IEEE BigData 2024)</a>.
 	<br>
 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshop on Trustworthy Machine Learning for Healthcare (TrustML4Health @ IEEE BigData 2024)</a>.
