--- a/services.html
+++ b/services.html
@@ -165,6 +165,7 @@
             <ul>
 		    <li>2024:
 			<ul>
+				<li>ACM Transactions on Knowledge Discovery from Data (TKDD)</li>
 				<li>Journal of Frontiers in Big Data</li>
 				<li>Journal of Advances in Artificial Intelligence and Machine Learning</li>
 			</ul>
