--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[10/2024] I will serve as a reviewer for PAKDD 2025. </li>
 		<li>[09/2024] I will serve as a reviewer for AISTATS 2025. </li>
 		<li>[09/2024] I will serve as the Guest Editor for the Journal of Mathematics, MDPI. </li>
 		<li>[08/2024] A tutorial is accepted by IEEE BigData 2024. </li>
