--- a/services.html
+++ b/services.html
@@ -92,6 +92,7 @@
             <ul>
 		    <li>2025: 
 			<ul>
+				<li>Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
 				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
 				<li>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</li>
