--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,11 @@
             <p><strong>Preprints</strong></p>
                 <ol>
                     <li>
+                		FADE: Towards Fairness-aware Augmentation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
+                		<u>Yujie Lin</u>, <u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
+                		<em>ArXiv preprint, 2406.09495</em>
+                	</li>
+                    <li>
                 		Graphs Generalization under Distribution Shifts. </br>
                 		<u>Qin Tian</u>, Wenjun Wang, <strong>Chen Zhao</strong>, Minglai Shao, Wang Zhang, Dong Li. <br/>
                 		<em>ArXiv preprint, 2403.16334</em>
