--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 
 	    
 	<p style="text-align:justify;background-color:#D7BDE2">
+	<strong>Call for papers</strong>: Frontiers in Big Data, Frontiers Media SA, Special Issue: <a href="https://www.frontiersin.org/research-topics/68107/ethical-artificial-intelligence-methods-and-applications">Ethical Artificial Intelligence: Methods and Applications</a>. 
+	<br>
 	<strong>Call for papers</strong>: Mathematics, MDPI, Special Issue: <a href="https://www.mdpi.com/journal/mathematics/special_issues/2496644R7D">Advances in Trustworthy and Robust Artificial Intelligence</a>. 
 	<br>
 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshop on Robust Machine Learning for Distribution Shifts (RobustMLDS @ IEEE BigData 2024)</a>.
@@ -99,9 +101,10 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[10/2024] I will serve as the Guest Editor for the journal of Frontiers in Big Data, Frontiers Media SA </li>
 		<li>[10/2024] I will serve as a reviewer for PAKDD 2025. </li>
 		<li>[09/2024] I will serve as a reviewer for AISTATS 2025. </li>
-		<li>[09/2024] I will serve as the Guest Editor for the Journal of Mathematics, MDPI. </li>
+		<li>[09/2024] I will serve as the Guest Editor for the journal of Mathematics, MDPI. </li>
 		<li>[08/2024] A tutorial is accepted by IEEE BigData 2024. </li>
 		<li>[08/2024] I will serve as a reviewer for ICASSP 2025. </li>
 		<li>[08/2024] I will serve as a PC member for WWW 2025. </li>
