--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[10/2024] I will serve as the Guest Editor for the journal of Frontiers in Big Data, Frontiers Media SA </li>
+		<li>[10/2024] One paper is accepted by the Journal of Frontiers in Big Data. </li>
+		<li>[10/2024] I will serve as the Guest Editor for the Journal of Frontiers in Big Data, Frontiers Media SA </li>
 		<li>[10/2024] I will serve as a reviewer for PAKDD 2025. </li>
 		<li>[09/2024] I will serve as a reviewer for AISTATS 2025. </li>
-		<li>[09/2024] I will serve as the Guest Editor for the journal of Mathematics, MDPI. </li>
+		<li>[09/2024] I will serve as the Guest Editor for the Journal of Mathematics, MDPI. </li>
 		<li>[08/2024] A tutorial is accepted by IEEE BigData 2024. </li>
 		<li>[08/2024] I will serve as a reviewer for ICASSP 2025. </li>
 		<li>[08/2024] I will serve as a PC member for WWW 2025. </li>
