--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,11 @@
             <p><strong>Preprints</strong></p>
                 <ol>
                     <li>
+                        GDDA: Semantic OOD Detection on Graphs under Covariate Shift via Score-Based Diffusion Models. <br>
+                        <u>Zhixia He</u>, <strong>Chen Zhao</strong>, Minglai Shao, Yujie Lin, Dong Li, Qin Tian. <br>
+                        <em>ArXiv preprint, 2410.17526</em>
+                    </li>
+                    <li>
                 		FADE: Towards Fairness-aware Augmentation for Domain Generalization via Classifier-Guided Score-based Diffusion Models. </br>
                 		<u>Yujie Lin</u>, <u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao. <br/>
                 		<em>ArXiv preprint, 2406.09495</em>
@@ -83,6 +88,11 @@
 <!-- --------------------------------------------------------------------------------------------------------------------- -->
             <p><strong>Journal Papers</strong></p>
                 <ol>
+                    <li>
+                        <strong>[Frontier in Big Data]</strong> Efficient Out-of-Distribution Detection via Layer-Adaptive Scoring and Early Stopping. <br>
+                        <u>Haoliang Wang</u>, Chen Zhao, Feng Chen. <br>
+                        <em>Frontiers in Big Data, section Data Mining and Management</em>, 2024
+                    </li>
                     <li>
                 		<strong>[TKDD]</strong> Dynamic Environment Responsive Online Meta-Learning with Fairness Awareness. </br>
                 		<strong>Chen Zhao</strong>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen.<br/>
