--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,7 @@
                 <ol>
                     <li>
                         <strong>[Frontier in Big Data]</strong> Efficient Out-of-Distribution Detection via Layer-Adaptive Scoring and Early Stopping. <br>
-                        <u>Haoliang Wang</u>, Chen Zhao, Feng Chen. <br>
+                        <u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen. <br>
                         <em>Frontiers in Big Data, section Data Mining and Management</em>, 2024
                     </li>
                     <li>
