--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[10/2024] Two papers are accepted by the IEEE BigData 2024. </li>
 		<li>[10/2024] One paper is accepted by the Journal of Frontiers in Big Data. </li>
 		<li>[10/2024] I will serve as the Guest Editor for the Journal of Frontiers in Big Data, Frontiers Media SA </li>
 		<li>[10/2024] I will serve as a reviewer for PAKDD 2025. </li>
