--- a/publications.html
+++ b/publications.html
@@ -114,6 +114,16 @@
             <p><strong>Conference Papers</strong></p>
                 <ol>
                     <li>
+                        <strong>[BigData'24]</strong> MADOD: Generalizing OOD Detection to Unseen Domains via G-Invariance Meta-Learning. <br>
+                        <u>Haoliang Wang</u>, <strong>Chen Zhao</strong>, Feng Chen <br>
+                        <em>In Proceedings of the IEEE International Conference on Big Data</em> (<strong>regular paper</strong>), 2024
+                    </li>
+                    <li>
+                        <strong>[BigData'24]</strong> FEED: Fairness-Enhanced Meta-Learning for Domain Generalization. <br>
+                        <u>Kai Jiang</u>, <strong>Chen Zhao</strong>, Haoliang Wang, Feng Chen <br>
+                        <em>In Proceedings of the IEEE International Conference on Big Data</em> (<strong>regular paper</strong>), 2024
+                    </li>
+                    <li>
                 		<strong>[CIKM'24]</strong> Learning Fair Invariant Representations under Covariate and Correlation Shifts Simultaneously. </br>
                 		<u>Dong Li</u>, <strong>Chen Zhao</strong>, Minglai Shao, Wenjun Wang. <br/>
                 		<em>In Proceedings of the ACM International Conference on Information and Knowledge Management</em> (<strong>full paper</strong>), 2024
