--- a/services.html
+++ b/services.html
@@ -56,23 +56,23 @@
                         </ul>
                     <li>2024:
                         <ul>
-                            <li>[Orgnizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshops on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
-                            <li>[Orgnizer, Chair] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshops on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
-                            <li>[Orgnizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
-                            <li>[Orgnizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
+                            <li>[Organizer, Chair] <a href="https://sites.google.com/view/robustmlds24/home">The 1st Workshops on Robust Machine Learning for Distribution Shifts</a> (RobustMLDS @ IEEE BigData'24).</li>
+                            <li>[Organizer, Chair] <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshops on Trustworthy Machine Learning for Healthcare</a> (TrustML4Health @ IEEE BigData'24).</li>
+                            <li>[Organizer, Chair] <a href="https://ai-activities.github.io/EAI-workshop-24/">The 3rd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'24).</li>
+                            <li>[Organizer, Chair] <a href="https://ai-activities.github.io/UDM-workshop-24/">The 3rd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'24).</li>
                             <li>[Co-Chair] <a href="https://www3.cs.stonybrook.edu/~ieeebigdata2024/CommitteeMember.html#:~:text=Big%20Data%20Cup%20Challenges%20Co%2DChairs">Big Data Cup Challenges</a> (IEEE BigData'24).</li>
-                            <li>[Orgnizer] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>.</li>
+                            <li>[Organizer] <a href="https://www.ecs.baylor.edu/get-involved/southwest-data-science-conference-2024-baylor-university">The Southwest Data Science Conference</a>.</li>
                         </ul>
                     <li>2023:
                         <ul>
-                            <li>[Orgnizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">The 2nd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'23).</li>
-                            <li>[Orgnizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">The 2nd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'23).</li>
+                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD23/">The 2nd Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'23).</li>
+                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">The 2nd Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ KDD'23).</li>
                             <li>[Session Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'23).</li>
                         </ul>
                     <li>2022:
                         <ul>
-                            <li>[Orgnizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">The 1st Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'22).</li>
-                            <li>[Orgnizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">The 1st Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ AAAI'22).</li>
+                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">The 1st Workshops on Ethical Artificial Intelligence: Methods and Applications</a> (EAI @ KDD'22).</li>
+                            <li>[Organizer, Chair] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">The 1st Workshops on Uncertainty Reasoning and Quantification in Decision Making</a> (UDM @ AAAI'22).</li>
                             <li>[Mentor at <a href="https://kdd.org/kdd2022/kdd-uc.html">KDD-Undergraduate Consortium</a>] ACM Conference on Knowledge Discovery and Data Mining (KDD'22).</li>
                         </ul>
             </ul>
