--- a/talks.html
+++ b/talks.html
@@ -50,9 +50,17 @@
             <p><strong>Conference Tutorials</strong></p>
             <ul>
                 <li>
-                    Supervised Algorithmic Fairness in Distribution Shifts. <br>
-                    <strong>Chen Zhao</strong>, Xintao Wu.<br>
-                    IEEE International Conference on Big Data (BigData'24), Washington D.C., USA, 2024.
+                    Supervised Algorithmic Fairness in Distribution Shifts. 
+                    <ul>
+                        <li>
+                            <strong>Chen Zhao</strong>, Xintao Wu.<br>
+                            The Annual AAAI Conference on Artificial Intelligence (AAAI'25), Philadelphia, Pennsylvania, USA, 2025.
+                        </li>
+                        <li>
+                            <strong>Chen Zhao</strong>, Xintao Wu.<br>
+                            IEEE International Conference on Big Data (BigData'24), Washington D.C., USA, 2024.
+                        </li>
+                    </ul>
                 </li>
             </ul>
             
